--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
   <body>
     <div class="body_wrapper">
       <header class="header active">
-        <div class="header__top"><a class="header__top_link" href="/"><img class="header__top_logo" src="img/logo.png" alt="Фото логотип">
+        <div class="header__top"><a class="header__top_link" href="#"><img class="header__top_logo" src="img/logo.png" alt="Фото логотип">
             <p class="header__top_descr">Andrew Krasheninin		</p></a>
           <div class="header__burger active"><span></span></div>
         </div>
         <nav class="header__nav">
           <ul class="header__nav_list">
-            <li class="header__nav_item"><a class="header__nav_link btn" href="/">ПОРТФОЛИО</a></li>
-            <li class="header__nav_item"><a class="header__nav_link btn" href="">СТЕК</a></li>
-            <li class="header__nav_item"><a class="header__nav_link btn" href="">КОНТАКТЫ</a></li>
+            <li class="header__nav_item"><a class="header__nav_link btn" href="#">ПОРТФОЛИО</a></li>
+            <li class="header__nav_item"><a class="header__nav_link btn" href="#">СТЕК</a></li>
+            <li class="header__nav_item"><a class="header__nav_link btn" href="#">КОНТАКТЫ</a></li>
             <li class="header__nav_item"><a class="header__nav_link btn" href="https://github.com/onekrag" target="blank">GITHUB</a></li>
             <li class="header__nav_item"><a class="header__nav_link btn" href="https://kwork.ru/user/krashenininag" target="blank">KWORK</a></li>
           </ul>
