--- a/index.html
+++ b/index.html
@@ -23,19 +23,7 @@
             <li class="header__nav_item"><a class="header__nav_link btn" href="https://kwork.ru/user/krashenininag" target="blank">KWORK</a></li>
           </ul>
         </nav>
-        <div class="header__social"><a class="header__social_link" href="https://vk.com/krag_one" target="blank">
-            <svg class="icon icon-vk header__social_icon">
-              <use xlink:href="/img/svg/sprite.svg#vk"></use>
-            </svg></a><a class="header__social_link" href="https://www.instagram.com/krag_one/" target="blank">
-            <svg class="icon icon-insta header__social_icon">
-              <use xlink:href="/img/svg/sprite.svg#insta"></use>
-            </svg></a><a class="header__social_link" href="https://t.me/krag_one" target="blank">
-            <svg class="icon icon-tlg header__social_icon">
-              <use xlink:href="/img/svg/sprite.svg#tlg"></use>
-            </svg></a><a class="header__social_link" href="mailto:rumpel45@ya.ru" target="blank">
-            <svg class="icon icon-email header__social_icon">
-              <use xlink:href="/img/svg/sprite.svg#email"></use>
-            </svg></a></div>
+        <div class="header__social"><a class="header__social_link" href="https://vk.com/krag_one" target="blank"><img class="header__social_img" src="img/vk.png" alt=""></a><a class="header__social_link" href="https://www.instagram.com/krag_one/" target="blank"><img class="header__social_img" src="img/i.png" alt=""></a><a class="header__social_link" href="https://t.me/krag_one" target="blank"><img class="header__social_img" src="img/t.png" alt=""></a><a class="header__social_link" href="mailto:rumpel45@ya.ru" target="blank"><img class="header__social_img" src="img/e.png" alt=""></a></div>
       </header>
       <main class="main">
         <secttion class="section_1">
