--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
         <div class="header__social"><a class="header__social_link" href="https://vk.com/krag_one" target="blank"><img class="header__social_img" src="img/vk.png" alt=""></a><a class="header__social_link" href="https://www.instagram.com/krag_one/" target="blank"><img class="header__social_img" src="img/i.png" alt=""></a><a class="header__social_link" href="https://t.me/krag_one" target="blank"><img class="header__social_img" src="img/t.png" alt=""></a><a class="header__social_link" href="mailto:rumpel45@ya.ru" target="blank"><img class="header__social_img" src="img/e.png" alt=""></a></div>
       </header>
       <main class="main">
-        <secttion class="section_1">
+        <section class="section_1">
           <div class="section__body"><img class="section__body_img" src="img/1_bg.png" alt="Скриншот сайта из портфолио"><a class="section__body_link btn" href="https://onekrag.github.io/Bonolit/" target="blank">ПЕРЕЙТИ</a></div>
-        </secttion>
-        <secttion class="section_1">
+        </section>
+        <section class="section_1">
           <div class="section__body"><img class="section__body_img" src="img/2_bg.png" alt="Скриншот сайта из портфолио"><a class="section__body_link btn" href="https://onekrag.github.io/spec/" target="blank">ПЕРЕЙТИ</a></div>
-        </secttion>
-        <secttion class="section_1">
+        </section>
+        <section class="section_1">
           <div class="section__body"><img class="section__body_img" src="img/3_bg.png" alt="Скриншот сайта из портфолио"><a class="section__body_link btn" href="https://onekrag.github.io/komfort__lend/" target="blank">ПЕРЕЙТИ</a></div>
-        </secttion>
-        <secttion class="section_1">
+        </section>
+        <section class="section_1">
           <div class="section__body"><img class="section__body_img" src="img/4_bg.png" alt="Скриншот сайта из портфолио"><a class="section__body_link btn" href="https://onekrag.github.io/Panz_Wow/" target="blank">ПЕРЕЙТИ</a></div>
-        </secttion>
+        </section>
         <secttion class="section_1">
           <div class="section__body"><img class="section__body_img" src="img/5_bg.png" alt="Скриншот сайта из портфолио"><a class="section__body_link btn" href="https://onekrag.github.io/Panz/" target="blank">ПЕРЕЙТИ</a></div>
-        </secttion>
+        </section>
       </main>
       <footer class="footer"></footer>
       <script src="js/libs.min.js"></script>
