--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li class="header__nav_item"><a class="header__nav_link btn" href="#">СТЕК</a></li>
             <li class="header__nav_item"><a class="header__nav_link btn" href="#">КОНТАКТЫ</a></li>
             <li class="header__nav_item"><a class="header__nav_link btn" href="https://github.com/onekrag" target="blank">GITHUB</a></li>
-            <li class="header__nav_item"><a class="header__nav_link btn" href="https://kwork.ru/user/krashenininag" target="blank">KWORK</a></li>
+            <li class="header__nav_item"><a class="header__nav_link btn" href="https://kwork.ru/user/KrashenininAG?ref=2433811" target="blank">KWORK</a></li>
           </ul>
         </nav>
         <div class="header__social"><a class="header__social_link" href="https://vk.com/krag_one" target="blank"><img class="header__social_img" src="img/vk.png" alt=""></a><a class="header__social_link" href="https://www.instagram.com/krag_one/" target="blank"><img class="header__social_img" src="img/i.png" alt=""></a><a class="header__social_link" href="https://t.me/krag_one" target="blank"><img class="header__social_img" src="img/t.png" alt=""></a><a class="header__social_link" href="mailto:rumpel45@ya.ru" target="blank"><img class="header__social_img" src="img/e.png" alt=""></a></div>
