--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="body_wrapper">
       <header class="header active">
         <div class="header__top"><a class="header__top_link" href="#"><img class="header__top_logo" src="img/logo.png" alt="Фото логотип">
-            <p class="header__top_descr">Andrew Krasheninin		</p></a>
+            <p class="header__top_descr">Андрей</p></a>
           <div class="header__burger active"><span></span></div>
         </div>
         <nav class="header__nav">
@@ -40,6 +40,12 @@
         </secttion>
         <secttion class="section_1">
           <div class="section__body"><img class="section__body_img" src="img/5_bg.png" alt="Скриншот сайта из портфолио"><a class="section__body_link btn" href="https://onekrag.github.io/Panz/" target="blank">ПЕРЕЙТИ</a></div>
+        </secttion>
+        <secttion class="section_1">
+          <div class="section__body"><img class="section__body_img" src="img/1_bg.png" alt="Скриншот сайта из портфолио"><a class="section__body_link btn" href="https://onekrag.github.io/Site_GS/" target="blank">ПЕРЕЙТИ</a></div>
+        </secttion>
+        <secttion class="section_1">
+          <div class="section__body"><img class="section__body_img" src="img/1_bg.png" alt="Скриншот сайта из портфолио"><a class="section__body_link btn" href="https://onekrag.github.io/Site_ST/" target="blank">ПЕРЕЙТИ</a></div>
         </secttion>
       </main>
       <footer class="footer"></footer>
