--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
         <secttion class="section_1">
           <div class="section__body"><img class="section__body_img" src="img/5_bg.png" alt="Скриншот сайта из портфолио"><a class="section__body_link btn" href="https://onekrag.github.io/Panz/" target="blank">ПЕРЕЙТИ</a></div>
         </secttion>
-<!--         <secttion class="section_1">
+        <secttion class="section_1">
           <div class="section__body"><img class="section__body_img" src="img/1_bg.png" alt="Скриншот сайта из портфолио"><a class="section__body_link btn" href="https://onekrag.github.io/Site_GS/" target="blank">ПЕРЕЙТИ</a></div>
         </secttion>
         <secttion class="section_1">
           <div class="section__body"><img class="section__body_img" src="img/1_bg.png" alt="Скриншот сайта из портфолио"><a class="section__body_link btn" href="https://onekrag.github.io/Site_ST/" target="blank">ПЕРЕЙТИ</a></div>
-        </secttion> -->
+        </secttion>
       </main>
       <footer class="footer"></footer>
       <script src="js/libs.min.js"></script>
