--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li class="header__nav_item"><a class="header__nav_link btn" href="#">СТЕК</a></li>
             <li class="header__nav_item"><a class="header__nav_link btn" href="#">КОНТАКТЫ</a></li>
             <li class="header__nav_item"><a class="header__nav_link btn" href="https://github.com/onekrag" target="blank">GITHUB</a></li>
-            <li class="header__nav_item"><a class="header__nav_link btn" href="https://kwork.ru/user/KrashenininAG?ref=2433811" target="blank">KWORK</a></li>
+            <li class="header__nav_item"></li>
           </ul>
         </nav>
         <div class="header__social"><a class="header__social_link" href="https://vk.com/krag_one" target="blank"><img class="header__social_img" src="img/vk.png" alt=""></a><a class="header__social_link" href="https://www.instagram.com/krag_one/" target="blank"><img class="header__social_img" src="img/i.png" alt=""></a><a class="header__social_link" href="https://t.me/krag_one" target="blank"><img class="header__social_img" src="img/t.png" alt=""></a><a class="header__social_link" href="mailto:rumpel45@ya.ru" target="blank"><img class="header__social_img" src="img/e.png" alt=""></a></div>
@@ -46,6 +46,12 @@
         </secttion>
         <secttion class="section_1">
           <div class="section__body"><img class="section__body_img" src="img/1_bg.png" alt="Скриншот сайта из портфолио"><a class="section__body_link btn" href="https://onekrag.github.io/Site_ST/" target="blank">ПЕРЕЙТИ</a></div>
+        </secttion>
+        <secttion class="section_1">
+          <div class="section__body"><img class="section__body_img" src="img/1_bg.png" alt="Скриншот сайта из портфолио"><a class="section__body_link btn" href="https://onekrag.github.io/Stairs/" target="blank">ПЕРЕЙТИ</a></div>
+        </secttion>
+        <secttion class="section_1">
+          <div class="section__body"><img class="section__body_img" src="img/1_bg.png" alt="Скриншот сайта из портфолио"><a class="section__body_link btn" href="https://onekrag.github.io/Heating/" target="blank">ПЕРЕЙТИ</a></div>
         </secttion>
       </main>
       <footer class="footer"></footer>
