--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav class="header__nav">
           <ul class="header__nav_list">
             <li class="header__nav_item"><a class="header__nav_link btn" href="#">ПОРТФОЛИО</a></li>
-            <li class="header__nav_item"><a class="header__nav_link btn" href="#">СТЕК</a></li>
+            <li class="header__nav_item"><a class="header__nav_link btn" href="#stack">СТЕК</a></li>
             <li class="header__nav_item"><a class="header__nav_link btn" href="#">КОНТАКТЫ</a></li>
             <li class="header__nav_item"><a class="header__nav_link btn" href="https://github.com/onekrag" target="blank">GITHUB</a></li>
             <li class="header__nav_item"></li>
@@ -42,17 +42,29 @@
           <div class="section__body"><img class="section__body_img" src="img/5_bg.png" alt="Скриншот сайта из портфолио"><a class="section__body_link btn" href="https://onekrag.github.io/Panz/" target="blank">ПЕРЕЙТИ</a></div>
         </secttion>
         <secttion class="section_1">
-          <div class="section__body"><img class="section__body_img" src="img/1_bg.png" alt="Скриншот сайта из портфолио"><a class="section__body_link btn" href="https://onekrag.github.io/Site_GS/" target="blank">ПЕРЕЙТИ</a></div>
+          <div class="section__body"><img class="section__body_img" src="img/8_bg.png" alt="Скриншот сайта из портфолио"><a class="section__body_link btn" href="https://onekrag.github.io/Site_GS/" target="blank">ПЕРЕЙТИ</a></div>
         </secttion>
         <secttion class="section_1">
-          <div class="section__body"><img class="section__body_img" src="img/1_bg.png" alt="Скриншот сайта из портфолио"><a class="section__body_link btn" href="https://onekrag.github.io/Site_ST/" target="blank">ПЕРЕЙТИ</a></div>
+          <div class="section__body"><img class="section__body_img" src="img/6_bg.png" alt="Скриншот сайта из портфолио"><a class="section__body_link btn" href="https://druganov.com/" target="blank">ПЕРЕЙТИ</a></div>
         </secttion>
         <secttion class="section_1">
-          <div class="section__body"><img class="section__body_img" src="img/1_bg.png" alt="Скриншот сайта из портфолио"><a class="section__body_link btn" href="https://onekrag.github.io/Stairs/" target="blank">ПЕРЕЙТИ</a></div>
+          <div class="section__body"><img class="section__body_img" src="img/7_bg.png" alt="Скриншот сайта из портфолио"><a class="section__body_link btn" href="https://onekrag.github.io/Heating/" target="blank">ПЕРЕЙТИ</a></div>
         </secttion>
-        <secttion class="section_1">
-          <div class="section__body"><img class="section__body_img" src="img/1_bg.png" alt="Скриншот сайта из портфолио"><a class="section__body_link btn" href="https://onekrag.github.io/Heating/" target="blank">ПЕРЕЙТИ</a></div>
-        </secttion>
+        <section id="stack"><br>
+          <h2>Технологии:</h2><br>
+          <ul>
+            <li>- Адаптивная, кроссбраузерная верстка в соответствии с макетом</li>
+            <li>- Анимация</li>
+            <li>- HTML5</li>
+            <li>- CSS3</li>
+            <li>- JavaScript</li>
+            <li>- JQuery</li>
+            <li>- Gulp / Sass + Pug</li>
+            <li>- Git</li>
+            <li>- BEM</li>
+            <li>- Figma, Photoshop, Avacode</li><br>
+          </ul>
+        </section>
       </main>
       <footer class="footer"></footer>
       <script src="js/libs.min.js"></script>
