--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
         <section id="stack"><br>
           <h2>Технологии:</h2><br>
           <ul>
-            <li>- Адаптивная, кроссбраузерная верстка в соответствии с макетом</li>
-            <li>- Анимация</li>
-            <li>- HTML5</li>
-            <li>- CSS3</li>
-            <li>- JavaScript</li>
-            <li>- JQuery</li>
-            <li>- Gulp / Sass + Pug</li>
+            <li>- HTML5 / Pug</li>
+            <li>- CSS3 / Sass(Scss) / Tailwind</li>
+            <li>- JavaScript / JQuery</li>
+            <li>- Vue JS + Nuxt JS</li>
+            <li>- Gulp / Webpack</li>
             <li>- Git</li>
             <li>- BEM</li>
-            <li>- Figma, Photoshop, Avacode</li><br>
+            <li>- PixelPerfect - Адаптивная, кроссбраузерная верстка в соответствии с макетом</li>
+            <li>- Css Анимация</li>
+            <li>- Figma, Photoshop, Avacode, Adobe XD</li>
           </ul>
         </section>
       </main>
